# udp_client_server

./: .gitirnore  CMakeLists.txt  Readme.md
js/: reciever.mjs  sender.mjs
main/: CMakeLists.txt  UdpServerSync.cpp  asio_example_tcp_sync.cpp  book_example.cpp  client.cpp  client_struct.cpp  daytime_client.cpp  daytime_server.cpp  main.cpp  main_tcp.cpp  my_udp_send_rcv_example.cpp  receiver.cpp  request_reply.cpp  sams_example.cpp  sender.cpp  server.cpp  server_struct.cpp
net/: CMakeLists.txt
net/include/: net.h  utils.h
net/include/http/: RestClient.h
net/include/tcp/: TCPUtils.h  tcp_utils.h
net/include/udp/: udp_server.h  udp_utils.h
net/src/: TimeMetric.cpp
net/src/http/: RestClient.cpp
net/src/tcp/: TCPUtils.cpp  tcp_utils.cpp
net/src/udp/: udp_client.cpp  udp_server.cpp  udp_utils.cpp
test/: CMakeLists.txt  Hello-TEST.cpp  Serializer-TEST.cpp  SerializerTest.cpp  ServerTest.cpp  T2T-UdpProducerConsumer-TemplateFunction-TEST.cpp  T2T-UdpProducerConsumer-UdpUtilsSync-TEST.cpp  T2T-UdpRequestReply-TemplateFunction-TEST.cpp  T2T-UdpRequestReply-UdpUtilsSync-TEST.cpp
udp_client/: CMakeLists.txt  main_udp_client.cpp  udp_client.cpp
udp_lib/: CMakeLists.txt
udp_lib/include/: lm_udp.h  udp_client.h  udp_server.h
udp_lib/src/: udp_server.cpp
udp_server/: CMakeLists.txt  main_udp_server.cpp  udp_server.cpp
